about page alignment corrected

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -1,12 +1,12 @@
 .about {
-  padding: 4rem 2rem;
+  padding: 4rem 0;
   background: linear-gradient(135deg, var(--white) 0%, #ffffff 100%);
   color: var(--black);
 }
 
 .about-container {
   max-width: 1000px;
-  margin: auto;
+  /* margin: auto; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -35,7 +35,7 @@
 .about-text {
   flex: 1;
   min-width: 300px;
-    font-family: "Nunito", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 .about h2 {
   font-size: 2.5rem;
